# spektrixpython

./: .gitignore  LICENSE  MANIFEST  README.md  pyproject.toml  requirements.txt  setup.py  spektrixpython.ini.sample
spektrixpython/: __init__.py  spektrixpython.py
